# iphone-price-tracker-pro

./: .dockerignore  .env  README.md  docker-compose.yml  reset.sh
backend/: Dockerfile  Dockerfile.pgadmin  README.md  alembic.ini  auth.py  celerybeat-schedule  config_fixer.py  database.py  entrypoint.sh  logger_config.py  main.py  models.py  pyproject.toml  scraper.py  seed.py  servers.json  worker.py
backend/migrations/: env.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/nginx/: default.conf
frontend/src/: App.vue  main.js
frontend/src/api/: client.js  index.js
frontend/src/router/: index.js
frontend/src/views/: Favorites.vue  Login.vue  NotFound.vue  ProductHistory.vue  ProductList.vue
nginx/: default.conf
